# parameterize

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/example/: example.py
src/parameterize/: __init__.py  calculate.py  utils.py
src/tests/: test_calculate.py
