[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parameterization"
version = "0.0.1"
authors = [
  { name="Arya Guddemane Vishwakumar", email="aryagv626jv@gmail.com" },
]
description = "A package to calculate the volume of a sphere using radius"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/arya626/parameterize"
